// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorGroupOverview -> List should render columns correctly 1`] = `
<EuiToolTip
  content="opbeans-python"
  delay="regular"
  id="service-name-tooltip"
  position="top"
>
  <Styled(APMLink)
    path="/opbeans-python/transactions"
  >
    opbeans-python
  </Styled(APMLink)>
</EuiToolTip>
`;

exports[`ErrorGroupOverview -> List should render empty state 1`] = `
<ManagedTable
  columns={
    Array [
      Object {
        "field": "serviceName",
        "name": "Name",
        "render": [Function],
        "sortable": true,
        "width": "40%",
      },
      Object {
        "field": "environments",
        "name": "Environment",
        "render": [Function],
        "sortable": true,
        "width": "20%",
      },
      Object {
        "field": "agentName",
        "name": "Agent",
        "render": [Function],
        "sortable": true,
      },
      Object {
        "dataType": "number",
        "field": "avgResponseTime",
        "name": "Avg. response time",
        "render": [Function],
        "sortable": true,
      },
      Object {
        "dataType": "number",
        "field": "transactionsPerMinute",
        "name": "Trans. per minute",
        "render": [Function],
        "sortable": true,
      },
      Object {
        "dataType": "number",
        "field": "errorsPerMinute",
        "name": "Errors per minute",
        "render": [Function],
        "sortable": true,
      },
    ]
  }
  initialPageSize={50}
  initialSort={
    Object {
      "direction": "asc",
      "field": "serviceName",
    }
  }
  items={Array []}
/>
`;

exports[`ErrorGroupOverview -> List should render with data 1`] = `
<ManagedTable
  columns={
    Array [
      Object {
        "field": "serviceName",
        "name": "Name",
        "render": [Function],
        "sortable": true,
        "width": "40%",
      },
      Object {
        "field": "environments",
        "name": "Environment",
        "render": [Function],
        "sortable": true,
        "width": "20%",
      },
      Object {
        "field": "agentName",
        "name": "Agent",
        "render": [Function],
        "sortable": true,
      },
      Object {
        "dataType": "number",
        "field": "avgResponseTime",
        "name": "Avg. response time",
        "render": [Function],
        "sortable": true,
      },
      Object {
        "dataType": "number",
        "field": "transactionsPerMinute",
        "name": "Trans. per minute",
        "render": [Function],
        "sortable": true,
      },
      Object {
        "dataType": "number",
        "field": "errorsPerMinute",
        "name": "Errors per minute",
        "render": [Function],
        "sortable": true,
      },
    ]
  }
  initialPageSize={50}
  initialSort={
    Object {
      "direction": "asc",
      "field": "serviceName",
    }
  }
  items={
    Array [
      Object {
        "agentName": "nodejs",
        "avgResponseTime": null,
        "environments": Array [
          "test",
        ],
        "errorsPerMinute": 46.06666666666667,
        "serviceName": "opbeans-node",
        "transactionsPerMinute": 0,
      },
      Object {
        "agentName": "python",
        "avgResponseTime": 91535.42944785276,
        "environments": Array [],
        "errorsPerMinute": 12.6,
        "serviceName": "opbeans-python",
        "transactionsPerMinute": 86.93333333333334,
      },
    ]
  }
/>
`;
